# reason-standard

./: .gitignore  LICENSE  README.md  bsconfig.json  dune  dune-project  esy.json  package.json  reason-standard.opam
.circleci/: config.yml
.github/: FUNDING.yml
bucklescript/: bsconfig.json  package.json
bucklescript/sources/: Core.ml  Core.mli  Ref.re  Ref.rei  Standard.ml  Vector.ml  Vector.mli  Vector.re
bucklescript/src/: Comparator.ml  Comparator.mli  Experimental.re  Int.ml  Integer.ml  Integer.mli  Standard.ml  Standard.mli  Standard.re  Standard.rei
bucklescript/test/: AlcoJest.re  ArrayTest.re  BoolTest.re  CharTest.re  ComparatorTest.ml  FloatTest.re  FunTest.re  IntTest.re  IntegerPlatformSpecificTest.re  IntegerTest.re  LandingPageCodeTest.re  ListTest.re  MapOcamlSyntaxSpecificTest.ml  MapTest.re  OptionTest.re  PlatformInterfaceDifferencesTest.js  ResultTest.re  SetOcamlSyntaxSpecificTest.ml  SetTest.re  Standard_test.re  StringOcamlSyntaxSpecificTest.ml  StringTest.re  Tuple3Test.re  TupleTest.re  VectorTest.re
docs/: Alternatives.md  Contributing.md  Conventions.md  CustomDataTypes.md  Data first vs Data last.md  Design guidelines.md  Design philosphy.md  Developing.md  Goals.md  Installation.md  Motivation.md  Roadmap.md  Usage.md  Writing documentation.md  codeblock.md  conventions.md  index.md  installation.md  motivation.md  t-middle.md  usage.md
documentation/: contributing.md  developing.md  installation.md
gatsby-source-odoc/: Readme.md  gatsby-node.js  package.json
native/: .gitignore  .ocamlformat  Extensions.ml  dune-project  package.json
native/benchmarks/: Benchmarks.re  dune
native/esy.lock/: index.json
native/sources/: Core.ml  Core.mli  Standard.ml  dune
native/src/: Core.ml  Core.mli  Core.re  Core.rei  Standard.ml  Standard.re  Standard.rei  dune
native/test/: AlcoJest.re  ArrayOcamlSyntaxSpecificTest.ml  ArrayTest.re  BoolTest.re  CharTest.re  FloatTest.re  FunTest.re  IntTest.re  IntegerPlatformSpecificTest.re  ListTest.re  MapOcamlSyntaxSpecificTest.ml  OptionTest.re  ResultTest.re  Runtest.re  SetOcamlSyntaxSpecificTest.ml  StringOcamlSyntaxSpecificTest.ml  StringTest.re  Test.re  Tuple3Test.re  TupleTest.re  dune
ocamldoc-json-generator/: .gitignore  JsonGenerator.ml  Makefile  dune-project  dune.bak
ocamldoc-json-generator/src/: JsonGenerator.ml  dune
ocamldoc-json-generator/test/: Core.ml  Example.ml  Fourier.ml  Included.ml
odoc-json-generator/: .gitignore  Makefile
odoc-json-generator/example/: Core.ml  Core.mli  ExampleEntry.ml  Makefile  dune
odoc-json-generator/src/: JsonGenerator.ml  dune
test/: dune
website/: buildPlaygroundArtifacts.js  gatsby-config.js  gatsby-node.js  package.json
website/content/: index.md
website/src/: theme.js
website/src/components/: CodeBlock.js  CodeMirror.js  GithubEditButton.js  Icon.js  Illustration.js  Layout.js  NextPrevious.js  RightSidebar.js  Sidebar.js  Syntax.js
website/src/components/mdx/: codeBlock.js  index.js
website/src/pages/: 404.js  api.js  index.js  try.js  try.todo
website/src/templates/: api.js  docs.js
(+3 files in other folders)
